# LVGL_simulation

./: .gitignore  CMakeLists.txt  CmakePresets.json  Makefile  README.md  cmake_install.cmake  main.c
guider_ui/custom/: custom.c  custom.h
image/: background.c  images.h
